--- a/o/op/ope/opengroup.org.html
+++ b/o/op/ope/opengroup.org.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the opengroup.org privacy policy that was archived on 2008-12-16.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20081216071013id_/http%3A//www.opengroup.org/privacy.htm) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the opengroup.org privacy policy that was archived on 2009-06-16.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090616182156id_/http%3A//www.opengroup.org/privacy.htm) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html lang="en"><head>
 <title>About The Open Group: Boundaryless Information Flow through interoperability</title>
@@ -147,16 +147,16 @@ body {
                     <p><a href="http://www.capgemini.com/" target="_blank"><br>
                     <img src="/images2/cap-gemini-logo.gif" alt="Capgemini" width="100" height="28" border="0" title="Capgemini"><br>
                       <br>
-                    </a><a href="http://www.eds.com/" target="_blank"><img src="/images2/eds-logo.gif" alt="EDS  IT Outsourcing Consultant" width="62" height="35" border="0" title="EDS  IT Outsourcing Consultant"></a><br>
-                      <br>
+                    </a>
+
                       <a href="http://www.hp.com/" target="_blank"><img src="/images2/hp-logo.gif" alt="HP" width="63" height="37" border="0" title="HP"></a><br>
 					  <br>
                       <a href="http://www.hsbc.com/" target="_blank"><img src="/images2/hsbclogo.jpg" alt="HSBC" width="100" height="18" border="0" title="HSBC"></a><br>
                       <br>
                       <a href="http://www.ibm.com/us/" target="_blank"><img src="/images2/ibm-logo.gif" alt="IBM" width="63" height="26" border="0" title="IBM"></a><br>
                       <br>
-                    <a href="http://www.nec.com/" target="_blank"><img src="/images2/nec-logo.gif" alt="NEC" width="65" height="21" border="0" title="NEC"></a></p>
-                    <a href="http://www.sap.com/" target="_blank"><img src="/images2/sap-logo.gif" alt="SAP" width="63" height="32" border="0" title="SAP"></a><p></p>
+                    <a href="http://www.nec.com/" target="_blank"><img src="/images2/nec-logo.gif" alt="NEC" width="65" height="21" border="0" title="NEC"></a><br><br>
+                    <a href="http://www.sap.com/" target="_blank"><img src="/images2/sap-logo.gif" alt="SAP" width="63" height="32" border="0" title="SAP"></a></p>
 <p><a href="http://www.sun.com/" target="_blank"><img src="/images2/sun-microsystems-2.gif" alt="Sun Microsystems" width="63" height="28" border="0" title="Sun Microsystems"></a><br>
                       <br>
                       <br>
@@ -277,7 +277,7 @@ document.write('<A HREF=\"mailto:\?subject\=Take a look at this page I found, ' 
 else { document.write('<A HREF=\"mailto:\?body\=Take a look at this page I found, ' + document.title + '. You can see this page at: ' + window.location + '\" onMouseOver="window.status=\'Send your colleague e-mail about this page\'; return true" TITLE="Send your colleague e-mail about this page"><span class="footer">Send this page to a colleague<\/A>');
 }
 //  End -->
-</script><a href="mailto:?body=Take a look at this page I found, About The Open Group: Boundaryless Information Flow through interoperability. You can see this page at: https://web.archive.org/web/20081216071013id_/http%3A//www.opengroup.org/privacy.htm" onmouseover="window.status='Send your colleague e-mail about this page'; return true" title="Send your colleague e-mail about this page"><span class="footer">Send this page to a colleague</span></a>
+</script><a href="mailto:?body=Take a look at this page I found, About The Open Group: Boundaryless Information Flow through interoperability. You can see this page at: https://web.archive.org/web/20090616182156id_/http%3A//www.opengroup.org/privacy.htm" onmouseover="window.status='Send your colleague e-mail about this page'; return true" title="Send your colleague e-mail about this page"><span class="footer">Send this page to a colleague</span></a>
                           &nbsp;&nbsp; | &nbsp;&nbsp;<a href="/legal.htm">Legal 
                           Notices &amp; Terms of Use</a>&nbsp;&nbsp; | &nbsp;&nbsp;<a href="/privacy.htm">Privacy 
                           Statement</a>&nbsp;&nbsp; | &nbsp;&nbsp;<a href="#top">Top 
@@ -289,21 +289,22 @@ else { document.write('<A HREF=\"mailto:\?body\=Take a look at this page I found
                     <tr> 
                       <td class="footerDashedLine"><div align="center" class="copyright">
                         <div align="center"><br>
-   <a href="/cprt.htm"><span class="copyright">Copyright © 1995-2008. The Open Group. All Rights
+   <a href="/cprt.htm"><span class="copyright">Copyright © 1995-2009. The Open Group. All Rights
    Reserved.</span></a></div>
 
 <!-- Start Google Analytics script -->
-<script src="https://ssl.google-analytics.com/urchin.js" type="text/javascript">
-</script>
 <script type="text/javascript">
-_uacct = "UA-292260-1";
-urchinTracker();
-</script>
+var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
+document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
+</script><script src="https://ssl.google-analytics.com/ga.js" type="text/javascript"></script>
+<script type="text/javascript">
+try {
+var pageTracker = _gat._getTracker("UA-292260-1");
+pageTracker._trackPageview();
+} catch(err) {}</script>
 <!-- End Google Analytics script -->
 
-<!-- Start Superstats code version 7.0b. Copyright 1997-2003 MyComputer.com, Inc. More info available at http://www.mycomputer.com --><br>
-<script language="JavaScript" type="text/javascript">/* You may give each page an identifying name, server, and channel on the next lines. */var pageName = "";var server = "";var channel = "";/**** DO NOT ALTER ANYTHING BELOW THIS LINE! ****/var code = ' '; </script><script language="JavaScript" type="text/javascript" src="https://code.superstats.com/code/ss/johnbligh/0/30b"></script><script language="JavaScript" type="text/javascript">br = navigator.appName + parseInt(navigator.appVersion);if (code != ' ' || br == 'Netscape2') document.write(code);else document.write(''+ ' <im'+'g'+ ' src="https://code.superstats.com/b/ss/johnbligh/1'+ '?pageName=' + escape(pageName) + '&server=' + escape(server)+ '&channel=' + escape(channel) + '" border=0>');document.write('<'); document.write('!-- ');</script> <img src="https://code.superstats.com/b/ss/johnbligh/1?pageName=&amp;server=&amp;channel=" border="0"><!-- <noscript><img src="https://stats.superstats.com/b/ss/johnbligh/1" border=0 alt=""></noscript><script language="JavaScript" type="text/javascript">document.write(' --'); document.write('>');</script> <br>
- <!-- End Superstats tracking code. -->
+
 
 
                       </div>
