--- a/b/be/bea/beautyschoolsdirectory.com.html
+++ b/b/be/bea/beautyschoolsdirectory.com.html
@@ -1,16 +1,14 @@
-<!--The following is the downloaded HTML source of the beautyschoolsdirectory.com privacy policy that was archived on 2008-12-16.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20081216012148id_/http%3A//www.beautyschoolsdirectory.com/terms) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the beautyschoolsdirectory.com privacy policy that was archived on 2009-06-16.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090616182238id_/http%3A//beautyschoolsdirectory.com/terms) for the most accurate reproduction.-->
 
 <html><head>
-	<title>Beauty Schools Directory - Your Guide to Beauty Schools</title>
-	<meta name="Keywords" content="">
-	<meta name="Description" content="">
-	<meta name="Author" content="">
-	<link rel="stylesheet" href="../s.css" type="text/css">
+	<title>Terms of Use / Privacy Statement | Beauty Schools Directory</title>
+		<meta name="Author" content="Donovan Thompson">
+	<link rel="stylesheet" href="/s.css" type="text/css">
 </head>
 
 <body bgcolor="#757575" text="#757575" link="#FB7D10" vlink="#FB7D10" alink="#FB7D10">
-
+		
 <table border="0" cellpadding="0" cellspacing="0" width="760" align="CENTER">
 	<tbody><tr>
 		<td width="1"><img src="http://www.beautyschoolsdirectory.com/images/space.gif" width="1" height="1" border="0" hspace="0" vspace="0"><br></td>
@@ -54,62 +52,106 @@
 
 	</tr>
 </tbody></table>
-<table align="center" width="760" cellpadding="0" cellspacing="0" border="0" bgcolor="#ffffff">
-	<tbody><tr>
-		<td width="1" bgcolor="#000000"><img src="../images/space.gif" width="1" height="1" border="0" hspace="0" vspace="0"><br></td>
-		<td width="99"><img src="../images/space.gif" width="99" height="20" border="0" hspace="0" vspace="0"><br></td>
-		<td width="560"><img src="../images/space.gif" width="560" height="1" border="0" hspace="0" vspace="0"><br></td>
-		<td width="99"><img src="../images/space.gif" width="99" height="1" border="0" hspace="0" vspace="0"><br></td>
-		<td width="1" bgcolor="#000000"><img src="../images/space.gif" width="1" height="1" border="0" hspace="0" vspace="0"><br></td>
-	</tr>
-	<tr>
-		<td width="1" bgcolor="#000000"><img src="../images/space.gif" width="1" height="1" border="0" hspace="0" vspace="0"><br></td>
-		<td></td>
-		<td valign="top">
-<!------------------------MAIN CONTENT ---------->
-				<h1>Terms of Use / Privacy Statement</h1>
-				<p><strong>Terms of Use</strong> <br>
-				  The  beautyschoolsdirectory.com web site is intended for use by prospective  students only. <br>
-		  Any commercial use of  the data, content, text, or images contained in the web site or its database is  strictly prohibited and constitutes an infringement of our copyrighted work  and content.</p>
-				<p><strong>Privacy Policy</strong><br>
-				  PlattForm Zuma, Inc., the parent  company of beautyschoolsdirectory.com, is respectful of your privacy. We track  and collect information which helps us analyze who visits our web site and what  services on our site provide the most useful information for you. Our request  for information collects personal data that is passed along to the school(s)  you identify so they can contact you with additional information. We also  collect information by placing cookies (small files) on your computer to track  how you move through our web site and where you found out about our web site.  We do not, however, collect or store any data in the cookies that would allow  us to identify you personally. <br>
-  <br>
-				  If you have any questions about this privacy policy, please contact us by e–mail  at <a href="mailto:info@beautyschoolsdirectory.com">info@beautyschoolsdirectory.com</a>. <br> <br>
-				  <strong>How do we use the  personal information that you provide to us?</strong><br>
-				  Broadly speaking, your personal information is used to help match your  interests with schools that provide the training you seek.&nbsp; Your information is shared with the schools  that you select, in order for them to contact you with information about their  programs. &nbsp;If your search yields no  results, we may store your information and send you updates if and when  programs you specified do become available. We also use personal information  for purposes of administering our business activities, providing customer  service, and making other products and services available to our customers and  prospective customers. Occasionally, we may also use the information we collect  to notify you about important changes to the web site, new services and special  offers we think you will find valuable.<br>
-				  <br>
-				  <strong>Sharing information  with third parties</strong><br>
-		  Beauty Schools Directory offers a number of third-party services from the site  through Co-Brand Service Providers and — if you choose to use these optional  services — may share some of your personally identifiable information with the  Co-Brand Service Provider offering such services. In addition, Beauty Schools  Directory may enter into strategic marketing alliances with third parties such  as advertisers, businesses, partners and subsidiaries who may be given access  to personal information, including your name, address and e-mail, for the  purpose of providing you with information about products and services that may  be of interest to you. We cannot and do not make any representations about the  practices and policies of these companies, and they are not subject to our  Privacy Policy. </p>
-				<br><br><hr><br>
-<!------------------------END MAIN ---------------->
-
-<p align="center">
+		<table align="center" width="760" cellpadding="0" cellspacing="0" border="0" bgcolor="#ffffff">
+			<tbody><tr>
+				<td width="1" bgcolor="#000000"><img src="images/space.gif" width="1" height="20" border="0" hspace="0" vspace="0"><br></td>
+			  <td width="758"><img src="images/space.gif" width="100" height="1" border="0" hspace="0" vspace="0"><br></td>
+				<td><img src="images/space.gif" width="460" height="1" border="0" hspace="0" vspace="0"><br></td>
+			  <td width="100"><img src="images/space.gif" width="100" height="1" border="0" hspace="0" vspace="0"><br></td>
+				<td width="1" bgcolor="#000000"><img src="images/space.gif" width="1" height="20" border="0" hspace="0" vspace="0"><br></td>
+			</tr>
+			<tr>
+				<td width="1" bgcolor="#000000"><img src="images/space.gif" width="1" height="20" border="0" hspace="0" vspace="0"><br></td>
+			  <td colspan="3">
+			  <div>
+				<!------------------------MAIN CONTENT ------------------------->
+				<h1 id="templatetitle">Terms of Use / Privacy Statement</h1><table border="0" width="90%" align="center">
+<tbody>
+<tr>
+<td>
+<p><strong>Terms of Use</strong> <br> The  beautyschoolsdirectory.com web site is intended for use by prospective  students only. <br> Any commercial use of the data, content, text, or images contained in
+the web site or its database is strictly prohibited and constitutes an
+infringement of our copyrighted work and content.</p>
+<p><strong>Privacy Policy</strong><br> Beauty Schools Marketing Group, the parent company of beautyschoolsdirectory.com,
+is respectful of your privacy. We track and collect information which
+helps us analyze who visits our web site and what services on our site
+provide the most useful information for you.  In addition, we work with FetchBack to display Retargeted ads to our site prospects, on our behalf, across the Internet. They collect Non-Personally Identifiable Information about your visits to our Website, and your interaction with our products and services. The anonymous information is collected through the use of a pixel tag, which is industry standard technology used by most major web sites. No Personally Identifiable Information is collected during this process. To read FetchBBack's Privacy Policy, <a href="http://www.fetchback.com/privacy.html" target="_blank">click here</a>. If you do not want FetchBack to collect this information, you may opt our of their service. Opting out will not in any way effect your use of our site. To Opt-Out of Fetchback Retargeting, please <a href="http://www.fetchback.com/optout.html" target="_blank">click here</a>. Visit the Network Advertising Initiatives Opt-Out by clicking <a href="http://www.networkadvertising.org/managing/opt_out.asp" target="_blank">here</a>.<br><br>Our request for
+information collects personal data that is passed along to the
+school(s) you identify so they can contact you with additional
+information. We also collect information by placing cookies (small
+files) on your computer to track how you move through our web site and
+where you found out about our web site. We do not, however, collect or
+store any data in the cookies that would allow us to identify you
+personally. <br> <br> If you have any questions about this privacy policy, please contact us by e–mail  at <a href="mailto:info@beautyschoolsdirectory.com">info@beautyschoolsdirectory.com</a>. <br> <br> <strong>How do we use the  personal information that you provide to us?</strong><br> Broadly speaking, your personal information is used to help match your
+interests with schools that provide the training you seek.&nbsp; Your
+information is shared with the schools that you select, in order for
+them to contact you with information about their programs. &nbsp;If your
+search yields no results, we may store your information and send you
+updates if and when programs you specified do become available. We also
+use personal information for purposes of administering our business
+activities, providing customer service, and making other products and
+services available to our customers and prospective customers.
+Occasionally, we may also use the information we collect to notify you
+about important changes to the web site, new services and special
+offers we think you will find valuable.<br> <br> <strong>Sharing information  with third parties</strong><br> Beauty Schools Directory offers a number of third-party services from
+the site through Co-Brand Service Providers and — if you choose to use
+these optional services — may share some of your personally
+identifiable information with the Co-Brand Service Provider offering
+such services. In addition, Beauty Schools Directory may enter into
+strategic marketing alliances with third parties such as advertisers,
+businesses, partners and subsidiaries who may be given access to
+personal information, including your name, address and e-mail, for the
+purpose of providing you with information about products and services
+that may be of interest to you. We cannot and do not make any
+representations about the practices and policies of these companies,
+and they are not subject to our Privacy Policy.</p>
+</td>
+</tr>
+</tbody>
+</table>			  <!------------------------END MAIN ----------------------------->
+			  </div>
+			  </td>
+			  <td width="1" bgcolor="#000000"><img src="images/space.gif" width="1" height="1" border="0" hspace="0" vspace="0"><br></td>
+			</tr>
+			<tr>
+				<td width="1" bgcolor="#000000"><img src="images/space.gif" width="1" height="1" border="0" hspace="0" vspace="0"><br></td>
+				<td colspan="3" width="758" bgcolor="#ffffff" align="center">
+					<p align="center">
 <font size="-2"> 
-<br> <br><br>
-<a href="http://www.beautyschoolsdirectory.com/featured/" class="fslink3" title="Seach Featured Schools in our network (alphabetized by state). Read details about any Featured School and easily request more information.">Featured Schools</a> | <a href="http://www.beautyschoolsdirectory.com/requestinfo/" class="fslink3" title="Request additional information from schools that interest you.">Request Info</a> | <a href="http://www.beautyschoolsdirectory.com/find/form.php" class="fslink3" title="Easily search any type of program in any location">Find a School</a> | <a href="http://www.beautyschoolsdirectory.com/faq/" class="fslink3" title="Find answes to common questions about the beauty school industry.">Common Q &amp; A</a> | <a href="http://www.beautyschoolsdirectory.com/" class="fslink3" title="Homepage - Easily search any type of program in any location.">Home</a><br>
-Copyright © 2004-2008 PlattForm Zuma, Inc. All Rights Reserved.<br>
-<a href="http://www.beautyschoolsdirectory.com/terms/" class="fslink2">Terms of Service/Privacy</a>
-.
+
+<a href="http://www.beautyschoolsdirectory.com/find/featuredschoolform.php" class="fslink3" title="Seach Featured Schools in our network (alphabetized by state). Read details about any Featured School and easily request more information."><br>
+<br>
+<br>
+Featured Schools</a> | <a href="http://www.beautyschoolsdirectory.com/requestinfo/" class="fslink3" title="Request additional information from schools that interest you.">Request 
+Info</a> | <a href="http://www.beautyschoolsdirectory.com/find/form.php" class="fslink3" title="Easily search any type of program in any location.">Find 
+a School</a> | <a href="http://www.beautyschoolsdirectory.com/faq/" class="fslink3" title="Find answers to common questions about the beauty school industry.">Common 
+Q &amp; A</a> | <a href="/blog/" class="fslink3" title="Take a look at the BSD Blog.">Blog</a> | <a href="http://www.beautyschoolsdirectory.com/about/" class="fslink3" title="A brief description of our company.">About BSD</a> | <a href="http://www.beautyschoolsdirectory.com/" class="fslink3" title="Homepage - Easily search any type of program in any location.">Home</a><br>Copyright © 2004-2009, Beauty Schools Marketing Group. All Rights Reserved.<br>
+<a href="http://www.beautyschoolsdirectory.com/terms/" class="fslink2">Terms of Service/Privacy</a> | <a href="http://www.beautyschoolsdirectory.com/site-map/" class="fslink3" title="Site Map - Navigate our site">Site Map</a>
 <br><br>
 </font>
 </p>
 
+<!--Google Analytics Code-->
 <script src="http://www.google-analytics.com/urchin.js" type="text/javascript">
 </script>
 <script type="text/javascript">
 _uacct = "UA-417456-16";
 urchinTracker();
-</script>		</td>
-		<td></td>
-		<td width="1" bgcolor="#000000"><img src="../images/space.gif" width="1" height="1" border="0" hspace="0" vspace="0"><br></td>
-	</tr>
-	<tr>
-		<td colspan="5" bgcolor="#000000"><img src="../images/space.gif" width="1" height="1" border="0" hspace="0" vspace="0"><br></td>
-	</tr>
+</script>
 
+<!--START MobileTracking-->
+<img style="display:none" alt="*" width="1" height="1" src="http://hit.deckstats.com/es/s/Ctrl?Command=DS_Hit&amp;d_id=d_dgd40slt">
+<!--END MobileTracking-->
+<iframe src="http://pixel.fetchback.com/serve/fb/pdc?cat=&amp;name=landing&amp;sid=1015&amp;fb_key=4kh57tpy" scrolling="no" width="1" height="1" marginheight="0" marginwidth="0" frameborder="0"></iframe>
 
+<!-- Magnify 360 tracking code -->
+<!-- <script language="javascript" type="text/javascript" src="http://ww2.beautyschoolsdirectory.com/client_files/client_1191/bsd.js"></script> -->				</td>
+				<td width="1" bgcolor="#000000"><img src="images/space.gif" width="1" height="1" border="0" hspace="0" vspace="0"><br></td>
+			</tr>
+			<tr>
+				<td colspan="5" bgcolor="#000000"><img src="images/space.gif" width="1" height="1" border="0" hspace="0" vspace="0"><br></td>
+			</tr>
+		</tbody></table>
+				
 
-
-
-
-</tbody></table></body></html>
+</body></html>
