--- a/m/mi/mil/militarytimes.com.html
+++ b/m/mi/mil/militarytimes.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the militarytimes.com privacy policy that was archived on 2008-12-16.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20081216062137id_/http%3A//www.militarytimes.com/privacy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the militarytimes.com privacy policy that was archived on 2009-06-16.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090616182354id_/http%3A//www.militarytimes.com/privacy) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head>
 <title>Military News, benefits, careers, photos, discussions - Military Times HOME</title>
@@ -22,7 +22,7 @@
 //configuration
 OAS_url = 'http://gcirm.mconetwork.gcion.com/RealMedia/ads/';
 OAS_sitepage = 'www.militarytimes.com/help'
-OAS_listpos = '728x90_1,160x600_1,300x250_1,,300x250_2,300x600_1,728x90_2';
+OAS_listpos = '728x90_1,160x600_1,300x250_1,300x250_2,300x600_1,728x90_2';
 OAS_query = '';
 OAS_target = '_top';
 //end of configuration
@@ -36,8 +36,8 @@ function OAS_NORMAL(pos) {
     //-->
     </script><!------ OAS SETUP end ------>
 
-			<script language="javascript1.1" type="text/javascript" src="http://atpco.ur.gcion.com/global/AD/AdtechGlobalSettings-stage.js"></script>
-			<script language="javascript1.1" type="text/javascript" src="http://atpco.ur.gcion.com/AD/AdtechSiteSettings-stage.js"></script>
+			<script language="javascript1.1" type="text/javascript" src="http://atpco.ur.gcion.com/global/AD/AdtechGlobalSettings.js"></script>
+			<script language="javascript1.1" type="text/javascript" src="http://atpco.ur.gcion.com/AD/AdtechSiteSettings.js"></script>
 			<script language="javascript1.1" type="text/javascript" src="http://atpco.ur.gcion.com/Scripts/AD/Adtechscript.js"></script> 
 		
 <!-- HEADER BEGINS HERE -->
@@ -65,7 +65,7 @@ function OAS_NORMAL(pos) {
 				</div>
 				<div class="search">
 					<form action="http://search.militarytimes.com/sp" method="get">
-						<input type="hidden" name="aff" value="100">
+						<input type="hidden" name="aff" value="1100">
                     	<input name="keywords" type="text" value="" size="15" maxlength="250">
 						<input class="button" name="Search" type="submit" value="Search">
 					</form>
@@ -136,10 +136,9 @@ function OAS_NORMAL(pos) {
 		window.open('/frontline/index.php?date=' + mypage, 'Frontline','resizable=no,scrollbars=no,width=900,height=628,left=0,top=0');
 	}
 </script>
-<h2>Quick Links</h2>
 <ul>
-	<li><a href="http://www.militarytimes.com/forums/">Military Discussions</a></li>
-	<li><a href="javascript:openNewWin('2008/12/15')">Frontline Photos</a></li>
+	<li><a href="http://www.militarycity.com/discussions/">Military Discussions</a></li>
+	<li><a href="javascript:openNewWin('2009/06/16')">Frontline Photos</a></li>
 	<li><a href="http://www.militarycity.com/valor/honor.html">Honor the Fallen</a></li>
 </ul>			</div>
 			
@@ -238,7 +237,8 @@ function OAS_NORMAL(pos) {
 	<div class="custsvc_subhead">Contact us</div>
 	Army Times Publishing Company<br>
 	6883 Commercial Dr.<br>
-	Springfield, Va. 22159-0500 USA	<br><br>		
+	Springfield, Va. 22159-0500 USA	<br><br>
+	
 	<div class="custsvc_subhead">Customer Service</div>
 	1-800-368-5718 or 1-703-750-7400
 	<div class="custsvc_listingright">
@@ -269,13 +269,13 @@ function OAS_NORMAL(pos) {
 	<div class="span footer">
 		<div class="left">
 			<div class="issue">
-				<!--Built from cache: 0.0012969970703125<BR>--><div class="cover">
+				<div class="cover">
 <a href="/subscribe/"><img src="/xml/front/subscriptions.JPG" alt="Only $1.07 an issue!"></a>
 </div>
 <div class="lead">
 <h2><a href="/subscribe/">Subscribe to the Military Times newspapers</a></h2><br>
 <a href="/subscribe/" class="h">Only $1.07 an issue!</a><br>
-Every week, the print editions of our newspapers, Army Times, Navy Times, Air Force Times and Marine Corps Times deliver exclusive, original in-depth news and analysis directly to your home or office. Subscribe today, and save 60 percent off the cover price.					<!--
+Every week, the print editions of our newspapers, Army Times, Navy Times, Air Force Times and Marine Corps Times deliver exclusive, original in-depth news and analysis directly to your home or office. Subscribe today, and save 67% off the cover price.					<!--
 					<div class="drop">
 						<a href="/subscribe/">Subscribe</a>&nbsp;&nbsp;|&nbsp;&nbsp;<a href="/about/">About</a>
 					</div>
@@ -323,11 +323,23 @@ Every week, the print editions of our newspapers, Army Times, Navy Times, Air Fo
  //--></script>
 		</div>
 		<div class="legal">
-			All content © 2008, Army Times Publishing Company&nbsp;&nbsp;|&nbsp;&nbsp;<a href="/terms/">Terms of Service</a>&nbsp;&nbsp;|&nbsp;&nbsp;<a href="/privacy/">Privacy Policy</a>
+			All content © 2009, Army Times Publishing Company&nbsp;&nbsp;|&nbsp;&nbsp;<a href="/terms/">Terms of Service</a>&nbsp;&nbsp;|&nbsp;&nbsp;<a href="/privacy/">Privacy Policy</a>
 		</div>
 		<div class="clear"><!-- FIX THE BOX --></div>
 	</div>
 	<div class="clear"><!-- FIX THE BOX --></div>
 </div>
+
+<script type="text/javascript">
+var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
+document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
+</script><script src="https://ssl.google-analytics.com/ga.js" type="text/javascript"></script>
+<script type="text/javascript">
+try {
+var pageTracker = _gat._getTracker("UA-841082-4");
+pageTracker._trackPageview();
+} catch(err) {}</script>
+
+
 
 </body></html>
