--- a/d/de/dem/democraticunderground.com.html
+++ b/d/de/dem/democraticunderground.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the democraticunderground.com privacy policy that was archived on 2008-12-16.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20081216012801id_/http%3A//www.democraticunderground.com/privacy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the democraticunderground.com privacy policy that was archived on 2009-06-16.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090616182417id_/http%3A//www.democraticunderground.com/privacy.html) for the most accurate reproduction.-->
 
 <html><head>
 <title>Democratic Underground Privacy Policy</title>
@@ -55,7 +55,20 @@
       <p>The Democratic Underground Site may  include features, such as discussion forums, blog comment forms and  related tools, that allow users to publicly share information about  themselves. Any information a user discloses in these areas is  publicly available on the Internet. Such information may be read,  archived, collected, or used by other Internet users, including  automated services such as search engines. Democratic Underground is  not responsible for personally identifiable information you choose to  publicly disclose, and urges users to exercise caution when  disclosing information that may be personal in nature.<br>
         <br>
         <strong>Third Party Websites</strong></p>
-      <p>This Democratic Underground Privacy  Policy applies only to information collected by the Democratic  Underground Site. The Democratic Underground Site may contain links  to other third party web sites that are not owned or controlled by  Democratic Underground, including, but not limited to, third party  advertisers. These sites control their own privacy practices and are  not bound by this Democratic Underground Privacy Policy. Democratic  Underground is not responsible for the information or services  provided on third party sites provide, nor is it responsible for the  privacy practices or content of their sites.</p>
+      <p>This Democratic Underground Privacy Policy applies only to information
+        collected by the Democratic Underground Site. The Democratic Underground
+        Site may contain links to other third party web sites that are not owned or
+        controlled by Democratic Underground, including, but not limited to, third
+        party advertisers. These sites control their own privacy practices and are
+        not bound by this Democratic Underground Privacy Policy. Democratic
+        Underground is not responsible for the information or services provided on
+        third party sites provide, nor is it responsible for the privacy practices
+        or content of their sites.</p>
+      <p>Google, as a third party vendor, uses cookies to serve ads on the Democratic Underground site.
+        Google's use of the <a href="http://www.doubleclick.com/privacy/faq.aspx">DART cookie</a> enables it to serve ads to  users based
+        on their visit to this site and other sites on the Internet.  Users may opt
+        out of the use of the DART cookie by visiting the <a href="http://www.google.com/privacy_ads.html">Google ad and content
+        network privacy policy</a>.</p>
       <p><strong>Cookies</strong></p>
       <p>A cookie is a small text file that is  stored on a user's computer for record-keeping purposes.&nbsp;  Democratic Underground may use both “session ID cookies” and  “persistent cookies.” Democratic Underground uses cookies to  deliver content specific to your interests, provide convenience  features and for other purposes.</p>
       <p><strong>Disclosure by Legal Mandate</strong></p>
@@ -67,7 +80,7 @@
       <p><strong>Opt-Out and Modification of Provided  Information</strong></p>
       <p>Democratic Underground users may  request that their personal information be deleted from Site records  by sending an email to mail@democraticunderground.com. The Site will  remove personally identifiable information from its records for any  user that requests removal, provided that the user’s account  remains inactive for seven days. Any user whose information is  removed from Site records shall thereafter be bound by rules for “All  Users,” as provided above, except that information in the public  domain, such as a user’s forum posts while a Registered User, will  not be deleted from the Site’s records.</p>
       <p><strong>Changes to this Privacy Policy</strong></p>
-      <p>Democratic Underground reserves the  right to modify this Privacy Policy at any time by posting the  changes on the Democratic Underground Site. This Democratic  Underground Privacy Policy was last updated on December 13, 2008.</p>
+      <p>Democratic Underground reserves the  right to modify this Privacy Policy at any time by posting the  changes on the Democratic Underground Site. This Democratic  Underground Privacy Policy was last updated on April 9, 2009.</p>
       <p><strong>Contact Information</strong></p>
       <p>If you have any questions or  suggestions regarding our privacy policy, please contact Democratic  Underground at:<br>
         <br>
@@ -89,10 +102,10 @@
   Copyright 1997-2002 DCScripts.com</p>
 <hr noshade="" size="1">
 <p align="center" class="headfoot"><b><a href="http://www.democraticunderground.com/" class="navlink">Home</a> &nbsp;|&nbsp; <a href="http://www.democraticunderground.com/discuss/" class="navlink">Discussion 
-  Forums</a> &nbsp;|&nbsp; <a href="http://journals.democraticunderground.com" class="navlink">Journals</a> &nbsp;|&nbsp; <a href="http://www.democraticunderground.com/articles/index.html" class="navlink"></a> <a href="http://www.democraticunderground.com/articles/index.html" class="navlink">Articles</a> &nbsp;|&nbsp; <a href="http://demopedia.democraticunderground.com" class="navlink">Demopedia</a> &nbsp;|&nbsp; <a href="http://www.democraticunderground.com/cu" class="navlink">Campaigns</a> &nbsp;|&nbsp; <a href="http://www.democraticunderground.com/links/pages/" class="navlink">Links</a> &nbsp;|&nbsp; <a href="http://www.cafeshops.com/du_store" class="navlink">Store</a> &nbsp;|&nbsp; <a href="http://www.democraticunderground.com/donate.html" class="navlink">Donate</a></b></p>
-<p align="center" class="headfoot"><b><a href="http://www.democraticunderground.com/about.html" class="navlink">About&nbsp;DU</a> &nbsp;|&nbsp; <a href="http://www.democraticunderground.com/writing.html" class="navlink">Write&nbsp;for&nbsp;DU</a> &nbsp;|&nbsp; <a href="http://www.democraticunderground.com/privacy.html" class="navlink">Privacy&nbsp;Policy</a> &nbsp;|&nbsp; <a href="http://www.democraticunderground.com/contact.html" class="navlink">Contact 
+  Forums</a> &nbsp;|&nbsp; <a href="http://journals.democraticunderground.com" class="navlink">Journals</a> &nbsp;|&nbsp; <a href="http://www.democraticunderground.com/articles/index.html" class="navlink"></a> <a href="http://www.democraticunderground.com/articles/index.html" class="navlink">Articles</a> &nbsp;|&nbsp; <a href="http://www.democraticunderground.com/links/pages/" class="navlink">Links</a> &nbsp;|&nbsp; <a href="http://www.cafeshops.com/du_store" class="navlink">Store</a> &nbsp;|&nbsp; <a href="http://www.democraticunderground.com/donate.html" class="navlink">Donate</a></b></p>
+<p align="center" class="headfoot"><b><a href="http://www.democraticunderground.com/about.html" class="navlink">About&nbsp;DU</a> &nbsp;|&nbsp; <a href="http://www.democraticunderground.com/privacy.html" class="navlink">Privacy&nbsp;Policy</a> &nbsp;|&nbsp; <a href="http://www.democraticunderground.com/contact.html" class="navlink">Contact 
   Us</a></b></p>
-<p align="center" class="homepagetext">© 2001 - 2006 Democratic 
+<p align="center" class="homepagetext">© 2001 - 2009 Democratic 
   Underground, LLC</p>
 <p align="center" class="homepagetext"><a href="http://www.democraticunderground.com/donate.html"><img src="/home/new/donate.gif" width="150" height="73" border="0" alt="Click 
 here to donate to DU."></a><br>
