--- a/1/12/123/123exp-biographies.com.html
+++ b/1/12/123/123exp-biographies.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the 123exp-biographies.com privacy policy that was archived on 2008-12-16.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20081216014718id_/http%3A//www.123explore.com/123privacy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the 123exp-biographies.com privacy policy that was archived on 2009-06-16.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090616182907id_/http%3A//www.123explore.com/123privacy.html) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd"><html><head><title>Privacy Policy - 123explore!</title>
 <meta name="ROBOTS" content="NOINDEX,NOFOLLOW">
@@ -18,7 +18,7 @@ function setFocus()
 <table border="0" cellpadding="0" cellspacing="0" width="760" align="center">
 <tbody><tr>
  <td width="3"></td>
- <td width="170" height="45" valign="bottom"><a href=""><img border="0" src="images/1/123explore-170-29.gif" alt="123explore!" style="margin: 0px 0px 1px 0px;"></a></td>
+ <td width="170" height="45" valign="bottom"><a href="" class="noBg"><img border="0" src="images/1/123explore-170-29.gif" alt="123explore!" style="margin: 0px 0px 1px 0px;"></a></td>
  <td width="30"></td>
  <td width="349" align="center" valign="bottom"></td>
  <td width="199" valign="bottom"><div class="tx_slog">expand your knowlege</div></td>
@@ -122,6 +122,9 @@ Voluntarily provided information is used to send you announcements of new produc
 <br><p><b>LINKS TO THIRD-PARTY WEB SITES</b></p>
 <p>Through our web pages, you may connect to third parties' web sites via hyperlinks, and the connections may or may not be obvious. We are not responsible for the collection, use, maintenance, sharing, or disclosure of information by such third parties. We encourage our users to be aware of the varied privacy policies of web sites that they visit.</p>
 
+<br><p><b>THIRD-PARTY ADVERTISING COMPANIES</b></p>
+<p>We use third-party advertising companies to serve ads when you visit our website. These companies may use information (not including your name, address, email address, or telephone number) about your visits to this and other websites in order to provide advertisements about goods and services of interest to you.</p>
+
 <br><p><b>CORRESPONDENCE</b></p>
 <p>We maintain and review e-mail correspondence that you send to us. 
 We will use (and maintain in a file specific to you) the personally identifiable information disclosed in the e-mail. 
@@ -155,7 +158,7 @@ Your continued use of the web site following changes to this policy will indicat
 </td></tr></tbody></table>
 
 <table cellpadding="0" cellspacing="0" width="760" align="center">
- <tbody><tr><td width="760" class="vs-tx" align="center"><hr>(C) 2004-2008 Enlexica, Inc. All Rights Reserved.<br>
+ <tbody><tr><td width="760" class="vs-tx" align="center"><hr>(C) 2009 Enlexica, Inc. All Rights Reserved.<br>
 </td></tr>
 </tbody></table>
 
